use explicit fallback instead of LegacyLibraryConfigUtil.java